# fastapi-bootstrap

./: .cursorrules  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 7bb2856f3752_recreate_user_table_with_guid_ids.py  8a2c32a8dda8_initial_migration.py  ea5e5df942ae_add_first_last_name_to_user_table.py
app/: main.py
app/api/: routes.py
app/core/: config.py  database.py
app/db/: base.py  models.py
app/users/: auth.py  manager.py  models.py
docs/: README.md
