[project]
name = "fastapi-bootstrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic[sqlalchemy]>=1.14.0",
    "bcrypt[sqlalchemy]>=4.2.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[sqlalchemy]>=0.115.6",
    "passlib[sqlalchemy]>=1.7.4",
    "psycopg2-binary[sqlalchemy]>=2.9.10",
    "python-dotenv[sqlalchemy]>=1.0.1",
    "uvicorn[sqlalchemy]>=0.34.0",
]
