[project]
name = "fastapi-bootstrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "bcrypt>=4.2.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
